test/programs/good/typechecker/bit_3.lq
initBit :: !(() -> Bit)
initBit _ = 0b0

main :: Bit * Bit
main = (initBit (), initBit ())
