test/programs/bad/example00-CoinFlip__CorrectNumberOfFunctionArguments_1.lq
coinFlip :: !Bit
coinFlip  = measr (gate H (new @0)) 

other ::  Bit * Bit -> Bit
other qubits = q0, q1 <- qubits;
               coinFlip

main :: Bit ** 3 -> Bit
main arg1 arg2 = other arg1 arg2
